# open-webui-rust

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  CODE_INTERPRETER_TESTING.md  DOCKER_CHECKLIST.zh.md  DOCKER_DEV.md  DOCKER_DEV.zh.md  DOCKER_MIGRATION_GUIDE.md  DOCKER_MIGRATION_GUIDE.zh.md  DOCKER_QUICKSTART.md  DOCKER_QUICKSTART.zh.md  DOCKER_README.zh.md  Dockerfile  JSON_TOOL_SYSTEM_IMPLEMENTATION.md  LICENSE  Makefile.docker  README.en-US_.md  README.md  README.zh-CN.md  docker-compose.dev.yaml  docker-compose.yaml  docker-manage.sh  env.example  package-lock.json  package.json  vite.config.ts
docs/: DOCKER_CHECKLIST.md  DOCKER_README.md  DOCKER_SETUP.md  DOCKER_SETUP.zh.md  DOCKER_SUMMARY.md  DOCKER_SUMMARY.zh.md
react-frontend/: index.html  package-lock.json  package.json  vite.config.ts
react-frontend/src/: App.tsx
react-frontend/src/components/: Layout.tsx
react-frontend/src/lib/: constants.ts  utils.ts
react-frontend/src/pages/: AuthPage.tsx  ChatPage.tsx  ErrorPage.tsx
react-frontend/src/store/: index.ts
rust-backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.socketio  SOCKETIO_HYBRID.md  build.sh  env.example  knoxchat.env.example  run.sh  socketio_bridge.py  socketio_requirements.txt  start_with_socketio.sh
rust-backend/examples/: advanced_tool_features.json  cache_demo.rs  cache_integration.rs  sentence_transformers_example.rs  weather_tool.json
rust-backend/migrations/postgres/: 001_initial.sql  002_add_missing_columns.sql  003_add_config_table.sql  004_add_channel_messages.sql  005_add_note_feedback_tables.sql  006_add_folder_data_column.sql  007_add_file_columns.sql  008_add_group_data_column.sql  009_make_message_chat_id_nullable.sql  010_fix_chat_timestamps.sql
rust-backend/src/: cache_manager.rs  config.rs  db.rs  error.rs  main.rs  schema.sql  socket.rs  static_files.rs  websocket_chat.rs
rust-backend/src/middleware/: audit.rs  auth.rs  channel.rs  code_interpreter.rs  knowledge.rs  mod.rs  rate_limit.rs  request_id.rs  security.rs  security_headers.rs
rust-backend/src/models/: auth.rs  channel.rs  chat.rs  config.rs  feedback.rs  file.rs  folder.rs  function.rs  group.rs  knowledge.rs  memory.rs  message.rs  mod.rs  model.rs  note.rs  oauth_session.rs  prompt.rs  tag.rs  tool.rs  tool_runtime.rs  user.rs
rust-backend/src/retrieval/: chunking.rs  embeddings.rs  mod.rs
rust-backend/src/retrieval/vector/: chroma.rs  factory.rs  mod.rs  types.rs
rust-backend/src/routes/: audio.rs  auth.rs  cache.rs  channels.rs  chats.rs  code_execution.rs  configs.rs  evaluations.rs  files.rs  folders.rs  functions.rs  groups.rs  images.rs  knowledge.rs  knowledge_vector.rs  memories.rs  mod.rs  models.rs  notes.rs  openai.rs  pipelines.rs  prompts.rs  retrieval.rs  scim.rs  socketio_admin.rs  tasks.rs  tools.rs  users.rs  utils.rs
rust-backend/src/services/: audio.rs  auth.rs  channel.rs  chat.rs  config.rs  feedback.rs  file.rs  folder.rs  function.rs  group.rs  image.rs  knowledge.rs  ldap.rs  mcp.rs  memory.rs  message.rs  mod.rs  model.rs  models.rs  note.rs  oauth.rs  oauth_client.rs  pipeline.rs  prompt.rs  rag.rs  sandbox_executor.rs  static_files.rs  tool.rs  tool_runtime.rs  user.rs
rust-backend/src/socketio/: circuit_breaker.rs  events.rs  health.rs  logging.rs  manager.rs  metrics.rs  mod.rs  presence.rs  prometheus.rs  protocol.rs  rate_limit.rs  recovery.rs  redis_adapter.rs  transport.rs  ydoc.rs
rust-backend/src/utils/: access_control.rs  auth.rs  cache.rs  chat.rs  chat_completion.rs  chat_middleware.rs  embeddings.rs  misc.rs  mod.rs  password.rs  pipeline.rs  retrieval.rs  tasks.rs  template.rs  time.rs  version.rs  webhook.rs
sandbox-executor/: Cargo.toml  Dockerfile  Dockerfile.runtime  README.md  build.sh  docker-compose.yml  env.example  test.sh
sandbox-executor/examples/: javascript_example.json  python_example.json
sandbox-executor/src/: config.rs  error.rs  main.rs  models.rs  state.rs
sandbox-executor/src/api/: handlers.rs  mod.rs  routes.rs
sandbox-executor/src/container/: manager.rs  mod.rs  pool.rs  runtime.rs
sandbox-executor/src/executor/: audit.rs  engine.rs  mod.rs
sandbox-executor/src/security/: limits.rs  mod.rs  seccomp.rs
src/: App.tsx  LICENSE  app.css  index.css
src/components/: ErrorBoundary.tsx  ErrorBoundaryExample.tsx  Layout.tsx
src/components/admin/: AddConnectionModal.tsx  Functions.tsx  Settings.tsx  Users.tsx  create_shells.sh
src/components/channel/: ChannelMessage.tsx  ChannelMessageInput.tsx  Navbar.tsx  Thread.tsx
src/components/chat/: Chat.tsx  ChatNew.tsx  CodeBlock.tsx  CodeEditor.tsx  Markdown.tsx  Message.tsx  MessageInput.tsx  ModelSelector.tsx  ShareChatModal.tsx  ShortcutsModal.tsx  Suggestions.tsx  TagChatModal.tsx  ToolServersModal.tsx
src/components/common/: AddFilesPlaceholder.tsx  AddToolServerModal.tsx  Collapsible.tsx  ConfirmDialog.tsx  DragGhost.tsx  Drawer.tsx  Dropdown.tsx  FileItem.tsx  Folder.tsx  FullHeightIframe.tsx  Image.tsx  ImagePreview.tsx  ImportModal.tsx  Loader.tsx  Marquee.tsx  MentionList.tsx  NotificationToast.tsx  Overlay.tsx  Pagination.tsx  SVGPanZoom.tsx  Selector.tsx  Tags.tsx  index.ts
src/components/icons/: HashtagIcon.tsx  LockIcon.tsx  NoteIcon.tsx  PencilSquare.tsx  SearchIcon.tsx  SidebarIcon.tsx
src/components/layout/: AppSidebar.tsx  ArchivedChatsModal.tsx  NavGroup.tsx  Sidebar.tsx  UpdateInfoToast.tsx
src/components/notes/: AIMenu.tsx  NoteEditor.tsx  NotePanel.tsx  Notes.tsx  RecordMenu.tsx
src/components/playground/: CompletionsMode.tsx
src/lib/: constants.ts
src/lib/apis/: autocomplete.ts  files.ts  index.ts
src/lib/components/: AddConnectionModal.svelte  ImportModal.svelte  NotificationToast.svelte
src/lib/hooks/: useSocket.ts
src/lib/utils/: google-drive-picker.ts  index.ts  (+2 more)
src/pages/: ChannelPage.tsx  ChatPage.tsx  ErrorPage.tsx  NoteEditorPage.tsx  NotesPage.tsx  PlaygroundPage.tsx  SharedChatPage.tsx  WatchPage.tsx
src/routes/: +layout.svelte
svelte-frontend/: Dockerfile  Makefile.docker  package-lock.json  package.json  vite.config.ts
(+229 files in other folders)
