[package]
name = "open-webui-rust"
version = "0.9.6"
edition = "2021"
authors = ["OpenWebUI Contributors"]

[dependencies]
# Web framework
actix-web = { version = "4", features = ["cookies", "rustls-0_23", "compress-gzip", "compress-brotli"] }
actix-files = "0.6"
actix-cors = "0.7"
actix-multipart = "0.7"
actix-ws = "0.3.0"
actix-http = "3"
tokio = { version = "1", features = ["full"] }

# Async runtime
tokio-util = { version = "0.7", features = ["io"] }
futures = { version = "0.3", features = ["executor"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "json",
    "chrono",
    "uuid",
    "migrate"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Authentication & Security
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
argon2 = "0.5"
bcrypt = "0.17.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Redis
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager", "streams"] }
deadpool-redis = "0.22.0"
deadpool = "0.12"

# Configuration
config = "0.15.18"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3.44", features = ["serde"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Misc utilities
lazy_static = "1.4"
once_cell = "1.19"
bytes = "1.5"
mime = "0.3"
mime_guess = "2.0"
md5 = "0.8.0"

# AI/ML clients
async-openai = "0.30.1"

# Embeddings & Vector stores
# Using candle for pure Rust ML inference
candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
hf-hub = { version = "0.4.3", optional = true, features = ["tokio"] }
tokenizers = { version = "0.22.1", optional = true }

# Vector Database - Chroma
chromadb = "2.3.0"

# Text processing for RAG
tiktoken-rs = "0.9.1"
unicode-segmentation = "1.12.0"

# File handling
tempfile = "3.10"
walkdir = "2.4"

# HTTP streaming
eventsource-stream = "0.2"
futures-util = "0.3"

# OAuth & Security
base64 = "0.22"
sha2 = "0.10"
rand = "0.9.2"
urlencoding = "2.1"

# Additional utilities
regex = "1.11"
url = "2.5"

# Expression evaluation
evalexpr = "13.0.0"

# Rate limiting
governor = "0.10.1"
nonzero_ext = "0.3.0"
# Static file embedding (for bundling frontend into binary)
rust-embed = { version = "8.5", features = ["compression", "include-exclude"] }

# Socket.IO - Native Rust implementation
# WebSocket support (actix-ws already included above)
# For Socket.IO protocol parsing and encoding
serde_bytes = "0.11.19"
base64-simd = "0.8.0"

# Yjs CRDT for collaborative editing
yrs = "0.24.0"

# Optional features
[features]
default = ["embed-frontend"]
embed-frontend = []
embeddings = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

