[package]
name = "sandbox-executor"
version = "0.1.0"
edition = "2021"
authors = ["OpenWebUI Contributors"]

[dependencies]
# Web framework
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
actix-cors = "0.7.1"
actix-rt = "2.11.0"
tokio = { version = "1.48.0", features = ["full"] }

# Container & Docker integration
bollard = "0.19.4"  # Docker API client
nix = { version = "0.30.1", features = ["process", "signal", "resource"] }
hyper = "1.6.0"  # For Docker body types
http-body-util = "0.1"  # For body utilities

# Serialization
serde = { version ="1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Process management & isolation
# Note: Seccomp filtering handled via Docker JSON profiles (see src/security/seccomp.rs)

# Async utilities
futures = "0.3.31"
async-trait = "0.1.89"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# Configuration
config = "0.15.18"
dotenvy = "0.15.7"

# Utilities
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
bytes = "1.10.1"
base64 = "0.22.1"

# Rate limiting
governor = "0.10.1"
nonzero_ext = "0.3.0"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# HTTP client for health checks
reqwest = { version = "0.12.24", features = ["json"] }

# Resource limits
libc = "0.2.177"

# Temporary files
tempfile = "3.23.0"

# Regex for validation
regex = "1.12.2"

# Tar for container file operations
tar = "0.4.44"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

